# shitcraft

./: .gitmodules  CMakeLists.txt  CopyFolders.cmake  README  README.md  character.cpp  character.h  chunk.cpp  chunk.h  cmap.cpp  cmap.h  cmodel.cpp  cmodel.h  glcyan.cpp  glcyan.h  inventory.cpp  inventory.h  main.cpp  noise.cpp  noise.h  physics.cpp  physics.h  textures.cpp  textures.h  types.cpp  types.h  wblock.cpp  wblock.h  wctl.cpp  wctl.h  wgen.cpp  wgen.h  world.cpp  world.h  worldtypes.h  yanconv.cpp  yanconv.h
shaders/: defaultflat.fragment  defaultflat.vertex  flatcolor.fragment  gameobject.fragment  gameobject.vertex  text.fragment
